# slackbot_v1

./: .env  bot.py  pyproject.toml
