[tool.poetry]
name = "slackbot_v1"
version = "0.1.0"
description = ""
authors = ["Ben Hill <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slackclient = "^2.9.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
